--- a/JustADogIdentificationApp/app/src/main/res/layout/prediction_label.xml
+++ b/JustADogIdentificationApp/app/src/main/res/layout/prediction_label.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#10500"
+        android:background="#B5000000"
         android:orientation="horizontal">
 
         <TextView
